--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,8 +1,8 @@
 body 
 {
-    color: #333;
+    color: green;
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Times New Roman', Times, serif;
     font-size: 16px;
     margin: 0;
     padding: 0;
