--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,7 @@
 body 
 {
-    background: #1e1f24;
-    color: white;
+    background: white;
+    color: black;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
